# sharp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
locales/: de.json  de.yml  default.yml  en.default.yml  en.json
src/: app.rs  config.rs  exceptions.rs  gateway_service.rs  i18n.rs  main.rs  sharp.rs  storage.rs
src/app/: headers.rs  login.rs  register.rs  templates.rs
src/sharp/: app.rs  exceptions.rs  gateway_service.rs
src/sharp/app/: headers.rs  login.rs  register.rs  templates.rs
src/storage/: error.rs  memory.rs  session.rs  user.rs
templates/: base.html  bg-center-container.html  form-styles.css  login.html  register.html  reset-password.html
