[package]
name = "sharp"
version = "0.1.0"
edition = "2021"
description = "[s]elf-[h]osted [a]uthentication [r]everse [p]roxy"
authors = ["Lennart Kloock <lennart.kloock@protonmail.com>"]
license = "MIT"
repository = "https://github.com/lennartkloock/sharp"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

thiserror = "1.0.40"

tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros", "fs"] }
axum = { version = "0.6.12", features = ["headers"] }
axum-extra = { version = "0.7.3", features = ["cookie"] }
hyper = { version = "0.14.25", features = ["client"] }
tower = { version = "0.4.13" }

clap = { version = "4.2.1", features = ["derive"] }

serde = { version = "1.0.160", features = ["derive"] }
toml = "0.8.8"
derive_builder = "0.12.0"
merge = "0.1.0"

unic-langid = "0.9.1"
i18n_langid_codegen = "0.1.1"

askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"

[profile.release]
strip = "symbols"
